5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_2704.log
== TEST (2019-04-10 12:38:36) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v= S):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 4
    if (v= S):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:38:50) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v= S):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 4
    if (v= S):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:39:16) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v= "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 4
    if (v= "S"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:40:49) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper= "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 4
    if (v.upper= "S"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:02) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()= "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 4
    if (v.upper()= "S"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:30) 
-- CODE:
x= int(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:42:17) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:

print(k)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:42:31) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:43:10) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else (v.upper() == "N"):
	k= x
print(k)
-- ERROR:
File "XXXX", line 6
    else (v.upper() == "N"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:43:20) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:44:10) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:
	k= x
print(k)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:52:24) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= (x+(x/100*10)
else:
	k= x
print(float(k))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:52:37) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= x+(x/100*10)
else:
	k= x
print(float(k))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:52:48) 
-- CODE:
x= float(input("Nota do aluno:"))
v= input("S / N?")

if (v.upper()== "S"):
	k= x+(x/100*10)
else:
	k= x
print(float(k))
-- EXECUTION TIME:
0.172326
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
